# cc_cli3

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/cli/: cli.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/cli/group1/: commands.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/cli/group2/: commands.py
