[metadata]
name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
url = {{ cookiecutter.package_url }}
description = {{ cookiecutter.package_description }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword1, keyword2
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    package_name

[options.entry_points]
console_scripts = 
    cli-tool = {{ cookiecutter.package_name }}.cli:func_name