[metadata]
name = {{ cookiecutter.package_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
url = {{ cookiecutter.package_url }}
description = {{ cookiecutter.package_description }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword1, keyword2
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10, <4
install_requires =
    click
    package1
    package2
    package3
include_package_data = True

[options.entry_points]
console_scripts = 
    cli-tool = {{ cookiecutter.package_name }}.cli:func_name
